--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "flexboxgrid": "^6.3.1",
     "font-awesome": "^4.7.0",
+    "ngrx": "^2.0.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
